hphp/test/zend/good/ext/mbstring/tests/mb_strrpos_variation2.php.skipif
<?php
extension_loaded('mbstring') or die('skip');
function_exists('mb_strrpos') or die("skip mb_strrpos() is not available in this build");
?>