hphp/test/zend/bad/ext/mbstring/tests/mb_ereg_search_regs.php.skipif
<?php
if (!extension_loaded('mbstring')) die('skip mbstring not enabled');
function_exists('mb_ereg_search_regs') or die("skip mb_ereg_search_regs() not available");
?>